@@ -1,0 +1,12 @@
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <link rel="stylesheet" type="text/css" href="*.css" />
+    <script type="text/javascript" src="*.js">
+    </script>
+  </head>
+  <body>
+    <div id="content">
+      This is the content area.
+    </div>
+  </body>
+</html>
